<resources>
    <string name="app_name">Pairmatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_name">Имя</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Пароль</string>
    <string name="txt_male">Мужчина</string>
    <string name="txt_female">Женщина</string>
    <string name="txt_register">Регистрация</string>
    <string name="txt_login_without_line">Войти</string>
    <string name="txt_login"><u>Войти</u></string>
    <string name="txt_reg"><u>Регистрация</u></string>
    <string name="txt_ask_reg">Уже зарегистрированы?</string>
    <string name="txt_ask_login">Ещё не зарегистрированы?</string>
    <string name="txt_pp"><u>Политика конфиденциальности</u></string>
    <string name="txt_lorem">Вы можете делать ставки на то, как изменятся очки игрока во время матча.

Все игры созданы в режиме симуляции и не имеют аналогов в реальном мире</string>
    <string name="txt_lorem2">Odio pretium eget vitae eu. Lacus et quam pellentesque ultrices morbi facilisis duis. Viverra proin tristique iaculis pellentesque vitae sit urna condimentum tristique. Nam sit at nascetur tortor ut quis ullamcorper at. Amet facilisis risus quam quis id consequat dui. Nisl id molestie mauris gravida. Pellentesque tristique elit varius fermentum quis vulputate. Mattis gravida bibendum mi lobortis et quis vitae auctor. Facilisis ut enim euismod massa amet. Tristique cursus sollicitudin consectetur fames in odio vulputate tristique. Scelerisque ut nascetur tempor curabitur. A est pharetra pellentesque etiam maecenas. In dignissim non ipsum nascetur accumsan volutpat. Urna sit euismod elementum justo at viverra orci in massa. Nulla egestas leo lacus ac etiam iaculis est vulputate. Ut nullam magna faucibus habitant velit. Nisi in ultrices a sit non. Consequat orci in pharetra et elit netus. Semper senectus convallis risus id adipiscing.Odio pretium eget vitae eu. Lacus et quam pellentesque ultrices morbi facilisis duis. Viverra proin tristique iaculis pellentesque vitae sit urna condimentum tristique. Nam sit at nascetur tortor ut quis ullamcorper at. Amet facilisis risus quam quis id consequat dui. Nisl id molestie mauris gravida. Pellentesque tristique elit varius fermentum quis vulputate. Mattis gravida bibendum mi lobortis et quis vitae auctor. Facilisis ut enim euismod massa amet. Tristique cursus sollicitudin consectetur fames in odio vulputate tristique. Scelerisque ut nascetur tempor curabitur. A est pharetra pellentesque etiam maecenas. In dignissim non ipsum nascetur accumsan volutpat. Urna sit euismod elementum justo at viverra orci in massa. Nulla egestas leo lacus ac etiam iaculis est vulputate. Ut nullam magna faucibus habitant velit. Nisi in ultrices a sit non. Consequat orci in pharetra et elit netus. Semper senectus convallis risus id adipiscing.</string>
    <string name="score_info">Игроки зарабатывают очки за свои действия в игре. \n \n Это включает голы, передачи, сохранения ворот без пропущенных мячей и спасения. Они также могут получать дополнительные бонусные очки, если они являются одними из лучших игроков в системе бонусных очков (BPS) в любом матче. \n \n Система подсчёта очков: \n \n За игру до 60 минут - 1 очко \n За игру 60 минут или более (без учёта времени на перерывах) - 2 очка \n За каждый гол забитый полузащитником - 5 очков \n За каждый гол забитый нападающим - 4 очка \n За каждую передачу, приведшую к голу - 3 очка \n За каждые 3 отбитых удара вратарём - 1 очко \n За каждое отбитое наказание (пенальти) вратарём - 5 очков \n За каждое пропущенное наказание (пенальти) вратарём -2 очка Бонусные очки за лучших игроков в матче - от 1 до 3 очков \n За каждые 2 пропущенных гола вратарём или защитником -1 очко \n За каждую желтую карточку -1 очко \n За каждую красную карточку -3 очка \n За собственный гол -2 очка</string>
</resources>