<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/box_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/dark"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            android:paddingVertical="30dp">



            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                android:hint="@string/txt_email"/>

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="16dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:hint="@string/txt_password"/>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="26dp"
                app:cornerRadius="8dp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black"
                android:letterSpacing="0"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/txt_login_without_line"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:alpha="0.6"
                    android:text="@string/txt_ask_login"/>

                <TextView
                    android:id="@+id/btn_come_to_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/yellow_1"
                    android:textSize="18sp"
                    android:text="@string/txt_reg"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>